kubernetes/catalog/overseerr/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/diamkil/docker-templates/master/diamkil/overseerr.xml
# Category: MediaApp
# Stars: 75 | Downloads: 54440465
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: overseerr
  labels:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: overseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: overseerr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: overseerr
          image: sctx/overseerr
          # No environment variables defined
          # No ports defined

          # No volume mounts defined
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      # No volumes defined
