kubernetes/catalog/overseerr/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
  namespace: overseerr
  labels:
    app.kubernetes.io/name: overseerr
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`overseerr.int.infraweaver.local`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: overseerr
          port: 5055
  tls:
    store:
      name: default
      namespace: traefik
